# Titanic-Machine-Learning-from-Disaster

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  run_pipeline.py  simple_pipeline.py
artifacts/: eda_summary.csv
artifacts/20250811-121109/: model_logistic.joblib
artifacts/20250811-121558/: cv_scores_logistic.json  oof_logistic.npy  report.md
artifacts/20250811-232345/: cv_scores_catboost.json  model_catboost.joblib  report.md
artifacts/20250812-095902/: submission.csv
artifacts/20250812-100038/: submission.csv
artifacts/20250812-101412/: model_catboost.joblib  report.md
artifacts/20250812-101559/: model_catboost.joblib  oof_catboost.npy  report.md
artifacts/20250812-114033/: model.joblib  results.json  submission.csv
artifacts/20250812-115247/: cv_scores.json  fold_0_model.joblib  fold_1_model.joblib  fold_3_model.joblib  oof_predictions.csv  training_config.json  training_report.md
artifacts/20250812-115610/: fold_2_model.joblib  fold_4_model.joblib  oof_predictions.csv  training_report.md
artifacts/20250812-115901/: fold_3_model.joblib  oof_predictions.csv  predictions.csv  training_report.md
artifacts/20250812-120037/: cv_scores.json  fold_0_model.joblib  fold_1_model.joblib  fold_2_model.joblib  fold_4_model.joblib  oof_predictions.csv  predictions.csv  sub_unknown_cv08769_oof08753_thr050_20250812-120037.csv  submission.csv  submission__unknown-model__cv0.8769__oof0.8753__thr0.50.csv  training_report.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: base.yaml  features.yaml  models.yaml  tuning.yaml
configs/: data.yaml  experiment.yaml  inference.yaml  models.yaml  tuning.yaml
configs/profiles/: fast.yaml  full.yaml  leaderboard.yaml  leaderboard_loo.yaml  standard.yaml
data/: __init__.py  loader.py  titanic.py
data/based/: __init__.py  based_dataset.py  encoder_enum.py  file_types.py  sampling_types.py  scale_types.py  transformers_enums.py
data/processed/: test_features.csv  train_features.csv  train_preprocessed2.csv
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  EXAMPLES.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  RESTRUCTURING_COMPLETE.md  TESTING.md  test_strategy.md
notebooks/: 01_Preprocessing_Cabin_fill_nans.ipynb  01_eda_overview.ipynb  02_eda_features_and_leakage.ipynb  03_eda_age_analysis.ipynb  04_eda_fare_analysis.ipynb  05_eda_title_analysis.ipynb  06_eda_ticket_analysis.ipynb  07_eda_Name_analysis.ipynb  08_missing_values_analysis.ipynb  README.md  missing_values.ipynb  preprocessing-c.ipynb  preprocessing.ipynb  train_cabin_filled_gb.csv
scripts/: create_kaggle_tabular_lab.sh  run_full_pipeline.sh
src/: cli.py
src/core/: __init__.py  interfaces.py  utils.py
src/cv/: __init__.py  folds.py
src/data/: __init__.py  loader.py  profiler.py  validate.py
src/eval/: __init__.py  evaluator.py  utils.py
tests/: cli_diagnostic.py  conftest.py  conftest_additional.py  test_architecture_diagnostics.py  test_cli_commands.py  test_final_submission.py  test_kaggle_submission.py  test_leak_safe.py  test_pipeline_integration.py  test_smoke.py  test_working_pipeline.py
(+85 files in other folders)
